# binaryninja-xnu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Standalone.cpp  api.patch
.github/workflows/: build.yaml
CPP/: CPPTypeHelper.cpp  CPPTypeHelper.h
UI/: TypeSetter.cpp  TypeSetter.h
Workflows/: DarwinKernel.cpp  DarwinKernel.h
